# LLM_Agents_For_Beta_Testing

./: .gitignore  PROJECT_TUTORIAL.md  README.md  agent.py  app.py  aut_adapter.py  aut_service.py  code_structure.md  config.py  dashboard_app.py  description.txt  generate_action_distribution.py  llm.py  main.py  metrics.py  model_registry.py  multi_agent_router.py  orchestrator.py  persona_loader.py  plan.txt  pyproject.toml  reporter.py  requirements.txt  results.md  schemas.py  storage.py  validators.py  workflow.md
app/: __init__.py  agent.py  aut_adapter.py  browser_adapter.py  html_parser.py  llm_client.py  metrics.py  multi_agent_committee.py  multi_agent_runner.py  persona.py  runner.py  schemas.py  storage.py  validators.py
config/: default.yaml  model_config.yaml  scenario_demo.yaml
dashboards/: build_dashboard.py
experiments/: README.md  analysis.py  bug_injector.py  clear_database.py  demo_runner.py  generate_figures.py  metrics_collector.py  regressions.py  runner.py  schema.sql
experiments/benchmarks/: juice_shop.py  webshop.py
personas/: accessibility_tester.yaml  adversarial_attacker.yaml  curious_blogger.yaml  malicious_user.yaml  mobile_shopper.yaml  online_shopper.yaml  price_manipulator.yaml  project_manager.yaml  ux_researcher.yaml
scenarios/: juice_shop_security_audit.yaml  security_commerce_test.yaml  ui_shopping_flow.yaml  webshop_easy_001.yaml
static/: styles.css
templates/: account.html  cart.html  checkout.html  index.html  order-confirmation.html  product-detail.html  products.html  search.html  styles.css
(+22 files in other folders)
