[project]
name = "beta-agents"
version = "0.1.0"
description = "LLM agents as synthetic beta testers"
requires-python = ">=3.10"
dependencies = [
  "openai>=1.40.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.1",
  "python-dotenv>=1.0.1",
  "PyYAML>=6.0.0",
  "requests>=2.31.0",
  "rich>=13.7.0",
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
]

[tool.setuptools.packages.find]
where = ["."]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
